QC-41- Added : DCT Version and RCC version Validation

--- a/eSourcePlatform/DCT/DCT.csproj
+++ b/eSourcePlatform/DCT/DCT.csproj
@@ -154,15 +154,27 @@
       <UserCode>true</UserCode>
       <id>7797098d-95a7-402e-83da-2b039a156c22</id>
     </Compile>
-    <Compile Include="Clcik_Yes.cs">
+    <Compile Include="Click_Signin.cs">
+      <BoundTo>b6f8bb78-5871-45b1-9f7d-d85eb56522f4</BoundTo>
+      <DependentUpon>Click_Signin.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>02fdb878-c57e-4dda-91d9-aca78c826c07</id>
+    </Compile>
+    <Compile Include="Click_Signin.UserCode.cs">
+      <BoundTo>b6f8bb78-5871-45b1-9f7d-d85eb56522f4</BoundTo>
+      <DependentUpon>Click_Signin.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>f417061b-80f1-4bb7-9ca0-3ebed2c889d9</id>
+    </Compile>
+    <Compile Include="Click_Yes.cs">
       <BoundTo>7fcc53df-91e2-4bbb-90d1-6ea7decec83f</BoundTo>
-      <DependentUpon>Clcik_Yes.rxrec</DependentUpon>
+      <DependentUpon>Click_Yes.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>eb3945a0-0868-459c-977f-185f8c7d8c90</id>
     </Compile>
-    <Compile Include="Clcik_Yes.UserCode.cs">
+    <Compile Include="Click_Yes.UserCode.cs">
       <BoundTo>7fcc53df-91e2-4bbb-90d1-6ea7decec83f</BoundTo>
-      <DependentUpon>Clcik_Yes.rxrec</DependentUpon>
+      <DependentUpon>Click_Yes.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>a8ca85f1-562e-49df-98c4-6b5b1e27fa7d</id>
     </Compile>
@@ -424,6 +436,18 @@
       <RepositoryCode>true</RepositoryCode>
       <id>f6298286-aa3f-458a-90b8-327808dd4d31</id>
     </Compile>
+    <Compile Include="DCTVersion.cs">
+      <BoundTo>2b6cf2de-ded1-46f1-8f23-f559a678e887</BoundTo>
+      <DependentUpon>DCTVersion.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>ca8b9c24-2ad3-4ba9-9dbe-6ad28881babf</id>
+    </Compile>
+    <Compile Include="DCTVersion.UserCode.cs">
+      <BoundTo>2b6cf2de-ded1-46f1-8f23-f559a678e887</BoundTo>
+      <DependentUpon>DCTVersion.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>f5892eff-4273-44dd-a03d-28f4d00426a3</id>
+    </Compile>
     <Compile Include="DCT_URL.cs">
       <BoundTo>e95a132e-58c8-498a-a8bc-644dfb1159fb</BoundTo>
       <DependentUpon>DCT_URL.rxrec</DependentUpon>
@@ -447,6 +471,30 @@
       <DependentUpon>DCT_URL_VALIDATION.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>057d6536-c512-4e7d-8f04-621b7225ccd7</id>
+    </Compile>
+    <Compile Include="DebugConsole.cs">
+      <BoundTo>81e9ee80-8575-4e62-858d-30b1055ecd25</BoundTo>
+      <DependentUpon>DebugConsole.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>f8539cb4-4706-462a-bee3-c2383828bc52</id>
+    </Compile>
+    <Compile Include="DebugConsole.UserCode.cs">
+      <BoundTo>81e9ee80-8575-4e62-858d-30b1055ecd25</BoundTo>
+      <DependentUpon>DebugConsole.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>c6991e33-97b3-4a9c-92dd-d9a2ec92712d</id>
+    </Compile>
+    <Compile Include="EnterAzurePassword.cs">
+      <BoundTo>0a20c385-af5c-4c10-98ef-bed0e43f8036</BoundTo>
+      <DependentUpon>EnterAzurePassword.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>23a309cf-8baa-475e-9c27-d6331fd0473e</id>
+    </Compile>
+    <Compile Include="EnterAzurePassword.UserCode.cs">
+      <BoundTo>0a20c385-af5c-4c10-98ef-bed0e43f8036</BoundTo>
+      <DependentUpon>EnterAzurePassword.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>324c33b0-4033-4315-b8da-e62eedbe612e</id>
     </Compile>
     <Compile Include="EnterEmail.cs">
       <BoundTo>8e7a7c55-435c-4f39-a999-1882a84141b9</BoundTo>
@@ -520,6 +568,18 @@
       <UserCode>true</UserCode>
       <id>d38c8c67-d3b4-46f3-af00-6d22517bc679</id>
     </Compile>
+    <Compile Include="Hubversion.cs">
+      <BoundTo>ff47d569-13ec-4539-9c20-ceeace14d4ca</BoundTo>
+      <DependentUpon>Hubversion.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>9fc97a43-36c7-4a3c-977e-e084b4559454</id>
+    </Compile>
+    <Compile Include="Hubversion.UserCode.cs">
+      <BoundTo>ff47d569-13ec-4539-9c20-ceeace14d4ca</BoundTo>
+      <DependentUpon>Hubversion.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>16a1bc1b-cd7a-48b0-b500-fff28946d777</id>
+    </Compile>
     <Compile Include="LeavePage.cs">
       <BoundTo>ccdc9179-f3ff-4029-a3b4-9c381a43d624</BoundTo>
       <DependentUpon>LeavePage.rxrec</DependentUpon>
@@ -543,6 +603,18 @@
       <DependentUpon>LogoutOctopus.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>001b0914-acbb-4b5b-92e1-f02059c7d91f</id>
+    </Compile>
+    <Compile Include="Logout_Azure.cs">
+      <BoundTo>8c612756-2e3b-41d2-ad19-2c315a5280e7</BoundTo>
+      <DependentUpon>Logout_Azure.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>ecea8525-56a0-47d7-8f1c-6dda0fca36ba</id>
+    </Compile>
+    <Compile Include="Logout_Azure.UserCode.cs">
+      <BoundTo>8c612756-2e3b-41d2-ad19-2c315a5280e7</BoundTo>
+      <DependentUpon>Logout_Azure.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>f524b0ea-a1e1-41b7-8deb-72e67c0e0335</id>
     </Compile>
     <Compile Include="MoveValidation.cs">
       <BoundTo>c2acce52-d6fd-4d11-9b05-7a060ead2ff3</BoundTo>
@@ -664,8 +736,32 @@
       <UserCode>true</UserCode>
       <id>f91bfca2-bf9c-48c2-8d31-d37956303caf</id>
     </Compile>
+    <Compile Include="PowerShall.cs">
+      <BoundTo>b5383fc0-9bf3-47eb-be1f-59458813011d</BoundTo>
+      <DependentUpon>PowerShall.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>15e65e23-42d0-4e6c-b227-7a5d7c6e0fd0</id>
+    </Compile>
+    <Compile Include="PowerShall.UserCode.cs">
+      <BoundTo>b5383fc0-9bf3-47eb-be1f-59458813011d</BoundTo>
+      <DependentUpon>PowerShall.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>fec42b6f-fa27-428b-bf53-e760a15d3068</id>
+    </Compile>
     <Compile Include="Program.cs">
       <id>48bd5997-8cb4-45fe-a332-d4476fe318a5</id>
+    </Compile>
+    <Compile Include="RCCHubValidation.cs">
+      <BoundTo>e34e3756-b505-4732-826c-1da24f893b21</BoundTo>
+      <DependentUpon>RCCHubValidation.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>03a50ecf-28ab-45a7-8420-9d81707538df</id>
+    </Compile>
+    <Compile Include="RCCHubValidation.UserCode.cs">
+      <BoundTo>e34e3756-b505-4732-826c-1da24f893b21</BoundTo>
+      <DependentUpon>RCCHubValidation.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>5b63cf27-ac66-43ed-b270-3078e192ab6a</id>
     </Compile>
     <Compile Include="RCC_ExistingStudy.cs">
       <BoundTo>06e56362-3d7e-467b-a2db-29875d05d87f</BoundTo>
@@ -690,6 +786,54 @@
       <DependentUpon>RCC_Password.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>98d35bf0-36c7-4ebb-846e-f5cd41c25179</id>
+    </Compile>
+    <Compile Include="RCC_Version.cs">
+      <BoundTo>5314da9b-05c6-41e7-9f9c-cd28cfeefed4</BoundTo>
+      <DependentUpon>RCC_Version.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>57c35e73-670a-478c-aa32-547b34883e7d</id>
+    </Compile>
+    <Compile Include="RCC_Version.UserCode.cs">
+      <BoundTo>5314da9b-05c6-41e7-9f9c-cd28cfeefed4</BoundTo>
+      <DependentUpon>RCC_Version.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>3748d16b-c2b5-4c9f-bf6c-170ce99a3ad9</id>
+    </Compile>
+    <Compile Include="Recording1.cs">
+      <BoundTo>5c73dcec-72be-4366-a555-ddf2ec05677e</BoundTo>
+      <DependentUpon>Recording1.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>8b06aa5d-21f7-410e-a613-f87189851279</id>
+    </Compile>
+    <Compile Include="Recording1.UserCode.cs">
+      <BoundTo>5c73dcec-72be-4366-a555-ddf2ec05677e</BoundTo>
+      <DependentUpon>Recording1.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>6829f28e-30ff-4726-8853-b613df83f7d9</id>
+    </Compile>
+    <Compile Include="ReloadPage.cs">
+      <BoundTo>650dea59-4597-436d-b1a1-73a78f37102e</BoundTo>
+      <DependentUpon>ReloadPage.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>918b0c2c-dd92-40b0-b9f0-489f0c2b9192</id>
+    </Compile>
+    <Compile Include="ReloadPage.UserCode.cs">
+      <BoundTo>650dea59-4597-436d-b1a1-73a78f37102e</BoundTo>
+      <DependentUpon>ReloadPage.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>c42ae05e-a78c-41e7-93af-12063b4b3799</id>
+    </Compile>
+    <Compile Include="SelectUserName.cs">
+      <BoundTo>0e295af1-b38e-43d8-a8a2-bbb38dd0f9c6</BoundTo>
+      <DependentUpon>SelectUserName.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>41924f75-57d8-4047-ab74-608361e0f8e7</id>
+    </Compile>
+    <Compile Include="SelectUserName.UserCode.cs">
+      <BoundTo>0e295af1-b38e-43d8-a8a2-bbb38dd0f9c6</BoundTo>
+      <DependentUpon>SelectUserName.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>ea2d9f47-6554-4518-9de5-f48200c1cb7b</id>
     </Compile>
     <Compile Include="StartAssessment.cs">
       <BoundTo>c3949775-4279-4be9-9572-e922f8273291</BoundTo>
@@ -821,7 +965,12 @@
       <id>a779879f-9210-4eb9-8676-24426467c35e</id>
       <recordtableid>cad7618c-33e8-46da-b2bf-83a0f75b702b</recordtableid>
     </None>
-    <None Include="Clcik_Yes.rxrec">
+    <None Include="Click_Signin.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>b6f8bb78-5871-45b1-9f7d-d85eb56522f4</id>
+      <recordtableid>5936c9bf-f367-4cbc-929c-7912587f100d</recordtableid>
+    </None>
+    <None Include="Click_Yes.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>7fcc53df-91e2-4bbb-90d1-6ea7decec83f</id>
       <recordtableid>25bc1dc7-9054-4fd0-98c9-51085bc07402</recordtableid>
@@ -942,6 +1091,11 @@
       <repoid>59dabaae-715d-4842-b9c1-5b3cc7991797</repoid>
       <reporootid>1559d85e-a9d4-499b-8b78-a53d7c7c1eef</reporootid>
     </None>
+    <None Include="DCTVersion.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>2b6cf2de-ded1-46f1-8f23-f559a678e887</id>
+      <recordtableid>c0eda39e-1efb-45e4-b52f-162a54a54faa</recordtableid>
+    </None>
     <None Include="DCT_URL.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>e95a132e-58c8-498a-a8bc-644dfb1159fb</id>
@@ -951,6 +1105,16 @@
       <id>3c26cd19-a967-4e2e-be6c-ac4361ebbc0d</id>
       <recordtableid>ec22c345-3300-424b-92c4-004c30a5141c</recordtableid>
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+    </None>
+    <None Include="DebugConsole.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>81e9ee80-8575-4e62-858d-30b1055ecd25</id>
+      <recordtableid>16b1546b-c467-4c79-af1a-70a9f12392b6</recordtableid>
+    </None>
+    <None Include="EnterAzurePassword.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>0a20c385-af5c-4c10-98ef-bed0e43f8036</id>
+      <recordtableid>ea399d48-376a-48ca-be23-6753d5fe4e10</recordtableid>
     </None>
     <None Include="EnterEmail.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
@@ -982,6 +1146,11 @@
       <id>140501d6-e025-429a-8130-dc42c3cd8be5</id>
       <recordtableid>1f5223df-4269-456b-b5e8-d8e3320350d4</recordtableid>
     </None>
+    <None Include="Hubversion.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>ff47d569-13ec-4539-9c20-ceeace14d4ca</id>
+      <recordtableid>3c58db6f-d18b-4efc-9f55-1aa651e51eff</recordtableid>
+    </None>
     <None Include="LeavePage.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>ccdc9179-f3ff-4029-a3b4-9c381a43d624</id>
@@ -991,6 +1160,11 @@
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>90d7b03b-d5e4-410f-880b-c4a08ace0722</id>
       <recordtableid>83830357-899d-4fc4-b8e8-f7a982f59bec</recordtableid>
+    </None>
+    <None Include="Logout_Azure.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>8c612756-2e3b-41d2-ad19-2c315a5280e7</id>
+      <recordtableid>72bcb94e-5a74-4ad7-a339-a7fc508ab8d5</recordtableid>
     </None>
     <None Include="MoveValidation.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
@@ -1042,6 +1216,16 @@
       <id>76e1b26b-6abe-478d-b33f-cb8360c73d09</id>
       <recordtableid>73fe110e-198a-4073-aaac-d97e2fa59e5d</recordtableid>
     </None>
+    <None Include="PowerShall.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>b5383fc0-9bf3-47eb-be1f-59458813011d</id>
+      <recordtableid>e5be21a5-ba81-49ed-8dca-878f7e822eb4</recordtableid>
+    </None>
+    <None Include="RCCHubValidation.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>e34e3756-b505-4732-826c-1da24f893b21</id>
+      <recordtableid>7c929a2d-0e53-4d8a-bbe6-61f3664926d6</recordtableid>
+    </None>
     <None Include="RCC_ExistingStudy.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>06e56362-3d7e-467b-a2db-29875d05d87f</id>
@@ -1051,6 +1235,26 @@
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>4fb5c082-8e00-4443-b3d6-4316a35251be</id>
       <recordtableid>f5564136-5579-4875-9ecc-f178163e418b</recordtableid>
+    </None>
+    <None Include="RCC_Version.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>5314da9b-05c6-41e7-9f9c-cd28cfeefed4</id>
+      <recordtableid>9aa4db57-0c36-48f5-b0e4-034541eb1b12</recordtableid>
+    </None>
+    <None Include="Recording1.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>5c73dcec-72be-4366-a555-ddf2ec05677e</id>
+      <recordtableid>9f2b6e02-9486-49ab-bcbe-42714eb80706</recordtableid>
+    </None>
+    <None Include="ReloadPage.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>650dea59-4597-436d-b1a1-73a78f37102e</id>
+      <recordtableid>55dbb7db-788f-465a-914f-f3473f992eea</recordtableid>
+    </None>
+    <None Include="SelectUserName.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>0e295af1-b38e-43d8-a8a2-bbb38dd0f9c6</id>
+      <recordtableid>366ec434-a4de-4276-9c8c-e6703eef9698</recordtableid>
     </None>
     <None Include="StartAssessment.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
