--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -350,6 +350,18 @@
       <DependentUpon>Select_BatteryTemplate.rxrec</DependentUpon>
       <UserCode>true</UserCode>
     </Compile>
+    <Compile Include="AddBatteryPage\Select_Translations.cs">
+      <BoundTo>62d89ed9-f7f4-44cb-8d59-f3d260f342a7</BoundTo>
+      <DependentUpon>Select_Translations.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>685deb54-077b-4e5f-a64d-201f88977087</id>
+    </Compile>
+    <Compile Include="AddBatteryPage\Select_Translations.UserCode.cs">
+      <BoundTo>62d89ed9-f7f4-44cb-8d59-f3d260f342a7</BoundTo>
+      <DependentUpon>Select_Translations.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>afdecc8c-c543-4fc8-aa8b-06fb597d703b</id>
+    </Compile>
     <Compile Include="AddBatteryPage\Validate_BatteryBlocks.cs">
       <id>fae8d6fb-a086-45b5-92b8-e23a9153f261</id>
       <BoundTo>a0a21488-5be5-4ae5-b7d2-f16c365c8c69</BoundTo>
@@ -3105,6 +3117,11 @@
       <id>5da184d1-d464-41f5-9e19-e0331faf9c94</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>28d48d57-1bf5-4535-b798-78226952b412</recordtableid>
+    </None>
+    <None Include="AddBatteryPage\Select_Translations.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>62d89ed9-f7f4-44cb-8d59-f3d260f342a7</id>
+      <recordtableid>ce966977-68c8-4ec6-9100-5beb6dda450d</recordtableid>
     </None>
     <None Include="AddBatteryPage\Validate_BatteryBlocks.rxrec">
       <id>a0a21488-5be5-4ae5-b7d2-f16c365c8c69</id>
