QC-41 - Refactored some test cases for DCT and RCC version, adding some delays for CSP test cases.

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -1556,6 +1556,18 @@
       <DependentUpon>Validate_Required_BatteryTemplateStatus.rxrec</DependentUpon>
       <UserCode>true</UserCode>
     </Compile>
+    <Compile Include="ClickNoButton.cs">
+      <BoundTo>736781f6-6c3a-402e-9413-966838fac367</BoundTo>
+      <DependentUpon>ClickNoButton.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>b2b2cadc-76bb-42ef-883c-aef7c08ab976</id>
+    </Compile>
+    <Compile Include="ClickNoButton.UserCode.cs">
+      <BoundTo>736781f6-6c3a-402e-9413-966838fac367</BoundTo>
+      <DependentUpon>ClickNoButton.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>e5aa65aa-7f0a-4db0-8a13-fe70058127f3</id>
+    </Compile>
     <Compile Include="CSPRepository.cs">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <DependentUpon>CSPRepository.rxrep</DependentUpon>
@@ -3620,6 +3632,11 @@
       <id>c4df6933-e18f-4806-be75-b17a66a11ebc</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>080df293-98c0-462b-9cc8-0c147cc3a979</recordtableid>
+    </None>
+    <None Include="ClickNoButton.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>736781f6-6c3a-402e-9413-966838fac367</id>
+      <recordtableid>7fb7a567-b6ea-401d-9958-944d9c9515bc</recordtableid>
     </None>
     <None Include="CSPRepository.rximg">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
