--- a/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
+++ b/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
@@ -136,6 +136,18 @@
     <Compile Include="AssemblyInfo.cs">
       <id>ddd3f088-63bc-40ca-b06b-ba2e7448f40a</id>
     </Compile>
+    <Compile Include="CloseDCT.cs">
+      <BoundTo>31438c5c-84cd-447e-a179-75203cd97943</BoundTo>
+      <DependentUpon>CloseDCT.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>f0c630db-b95f-46ee-9b9c-edba52196ea4</id>
+    </Compile>
+    <Compile Include="CloseDCT.UserCode.cs">
+      <BoundTo>31438c5c-84cd-447e-a179-75203cd97943</BoundTo>
+      <DependentUpon>CloseDCT.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>7caebfa0-32a9-4ac5-bd30-aa64fcf27fe5</id>
+    </Compile>
     <Compile Include="eSourcePlatformRepository.cs">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <DependentUpon>eSourcePlatformRepository.rxrep</DependentUpon>
@@ -171,6 +183,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <id>aae3da34-4981-4765-ae6f-060bf0c2fb1c</id>
     </Content>
+    <None Include="CloseDCT.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>31438c5c-84cd-447e-a179-75203cd97943</id>
+      <recordtableid>28e676c4-cee4-497e-8b62-291ea3c2618f</recordtableid>
+    </None>
     <None Include="eSourcePlatformRepository.rximg">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <DependentUpon>eSourcePlatformRepository.rxrep</DependentUpon>
