q-41- Added Test case that help us to use and existing study, added test cases for Powerbi, added delays around getting Testidentifier from RCC-

--- a/eSourcePlatform/DCT/DCT.csproj
+++ b/eSourcePlatform/DCT/DCT.csproj
@@ -532,6 +532,18 @@
       <UserCode>true</UserCode>
       <id>c6991e33-97b3-4a9c-92dd-d9a2ec92712d</id>
     </Compile>
+    <Compile Include="N_Subject.cs">
+      <BoundTo>38e57827-450f-42ff-994a-fd484e7c3e56</BoundTo>
+      <DependentUpon>N_Subject.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>fe12366f-0b35-4c26-b58a-9fb634c58789</id>
+    </Compile>
+    <Compile Include="N_Subject.UserCode.cs">
+      <BoundTo>38e57827-450f-42ff-994a-fd484e7c3e56</BoundTo>
+      <DependentUpon>N_Subject.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>91496bba-9bb2-4657-9ebd-7afbebc4fcbc</id>
+    </Compile>
     <Compile Include="Program.cs">
       <id>48bd5997-8cb4-45fe-a332-d4476fe318a5</id>
     </Compile>
@@ -1118,6 +1130,11 @@
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>81e9ee80-8575-4e62-858d-30b1055ecd25</id>
       <recordtableid>16b1546b-c467-4c79-af1a-70a9f12392b6</recordtableid>
+    </None>
+    <None Include="N_Subject.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>38e57827-450f-42ff-994a-fd484e7c3e56</id>
+      <recordtableid>d7635c45-ecd6-4d03-9847-6176827a3379</recordtableid>
     </None>
     <None Include="RCC_Page\Begin_Test.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
