--- a/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
+++ b/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
@@ -136,6 +136,30 @@
     <Compile Include="AssemblyInfo.cs">
       <id>ddd3f088-63bc-40ca-b06b-ba2e7448f40a</id>
     </Compile>
+    <Compile Include="ClickNext.cs">
+      <BoundTo>7e02e012-6f6a-40ce-80c6-c8d6757bd432</BoundTo>
+      <DependentUpon>ClickNext.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>c9eebe14-57fe-49c1-9921-90bff63b0b64</id>
+    </Compile>
+    <Compile Include="ClickNext.UserCode.cs">
+      <BoundTo>7e02e012-6f6a-40ce-80c6-c8d6757bd432</BoundTo>
+      <DependentUpon>ClickNext.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>b7c54a18-ecce-483b-9b85-a45b71c4e45c</id>
+    </Compile>
+    <Compile Include="ClickOnstudy.cs">
+      <BoundTo>795d35b8-99fd-4578-abdc-5c0630123394</BoundTo>
+      <DependentUpon>ClickOnstudy.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>89b0de55-e1c3-483b-aa17-0095076e442a</id>
+    </Compile>
+    <Compile Include="ClickOnstudy.UserCode.cs">
+      <BoundTo>795d35b8-99fd-4578-abdc-5c0630123394</BoundTo>
+      <DependentUpon>ClickOnstudy.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>0c780538-f289-4e43-bbf4-e16ae527adba</id>
+    </Compile>
     <Compile Include="CloseDCT.cs">
       <BoundTo>31438c5c-84cd-447e-a179-75203cd97943</BoundTo>
       <DependentUpon>CloseDCT.rxrec</DependentUpon>
@@ -153,6 +177,54 @@
       <DependentUpon>eSourcePlatformRepository.rxrep</DependentUpon>
       <RepositoryCode>true</RepositoryCode>
       <id>f537482d-bb21-4a53-98dc-ed9eb32ba61b</id>
+    </Compile>
+    <Compile Include="Logout.cs">
+      <BoundTo>e1b5bb1a-bb56-48bf-be4c-0dd6512c708e</BoundTo>
+      <DependentUpon>Logout.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>e0a20616-ba50-43c8-8086-3423b627ce5b</id>
+    </Compile>
+    <Compile Include="Logout.UserCode.cs">
+      <BoundTo>e1b5bb1a-bb56-48bf-be4c-0dd6512c708e</BoundTo>
+      <DependentUpon>Logout.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>71cbd808-711f-4421-b9bf-7561c21293bb</id>
+    </Compile>
+    <Compile Include="Open_Study.cs">
+      <BoundTo>bf33b029-e351-48c9-a4e9-37c4d9e77db5</BoundTo>
+      <DependentUpon>Open_Study.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>bba22342-a8b0-4cb6-ae4b-3af1e5296210</id>
+    </Compile>
+    <Compile Include="Open_Study.UserCode.cs">
+      <BoundTo>bf33b029-e351-48c9-a4e9-37c4d9e77db5</BoundTo>
+      <DependentUpon>Open_Study.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>651a5983-4650-49d2-a6c5-e7134ed7cd49</id>
+    </Compile>
+    <Compile Include="PowerBILogin.cs">
+      <BoundTo>d1fa21c9-33f4-4eba-88fb-2fa2272444e2</BoundTo>
+      <DependentUpon>PowerBILogin.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>45b0e2b6-a4e1-45a5-85b0-779481ca9e07</id>
+    </Compile>
+    <Compile Include="PowerBILogin.UserCode.cs">
+      <BoundTo>d1fa21c9-33f4-4eba-88fb-2fa2272444e2</BoundTo>
+      <DependentUpon>PowerBILogin.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>ee2dab40-eaed-47b8-805a-da52d7d332df</id>
+    </Compile>
+    <Compile Include="PowerBIPassword.cs">
+      <BoundTo>4abab1b4-e1e0-4a59-ab5d-0a95388a40b1</BoundTo>
+      <DependentUpon>PowerBIPassword.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>8400a1d8-504e-43ef-821e-c0e58a1d1a77</id>
+    </Compile>
+    <Compile Include="PowerBIPassword.UserCode.cs">
+      <BoundTo>4abab1b4-e1e0-4a59-ab5d-0a95388a40b1</BoundTo>
+      <DependentUpon>PowerBIPassword.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>3f2e2f64-4e4e-43f0-a4fc-30e276820f86</id>
     </Compile>
     <Compile Include="Program.cs">
       <id>a96bd5ee-0e36-4cbf-8c8c-70a3e4390d99</id>
@@ -183,6 +255,16 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <id>aae3da34-4981-4765-ae6f-060bf0c2fb1c</id>
     </Content>
+    <None Include="ClickNext.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>7e02e012-6f6a-40ce-80c6-c8d6757bd432</id>
+      <recordtableid>d02dd396-b0aa-4cb3-8bbf-f876ec7c2a66</recordtableid>
+    </None>
+    <None Include="ClickOnstudy.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>795d35b8-99fd-4578-abdc-5c0630123394</id>
+      <recordtableid>7601614c-6a1d-4c1c-93a3-22a0b202a475</recordtableid>
+    </None>
     <None Include="CloseDCT.rxrec">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <id>31438c5c-84cd-447e-a179-75203cd97943</id>
@@ -198,6 +280,26 @@
       <id>1ff89b80-cba6-4f21-a417-c668d100f247</id>
       <repoid>1b4df078-48fd-44ad-b314-173b9dd113af</repoid>
       <reporootid>d677fdb9-00e1-4467-9fce-a84c063e8bd0</reporootid>
+    </None>
+    <None Include="Logout.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>e1b5bb1a-bb56-48bf-be4c-0dd6512c708e</id>
+      <recordtableid>99910ff5-fc68-42ba-9eee-40c95e3850ae</recordtableid>
+    </None>
+    <None Include="Open_Study.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>bf33b029-e351-48c9-a4e9-37c4d9e77db5</id>
+      <recordtableid>a0c69779-1d5e-498c-8b59-232bdcdf6d02</recordtableid>
+    </None>
+    <None Include="PowerBILogin.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>d1fa21c9-33f4-4eba-88fb-2fa2272444e2</id>
+      <recordtableid>310c9589-c4c0-430f-9acb-89c4d0733fb5</recordtableid>
+    </None>
+    <None Include="PowerBIPassword.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>4abab1b4-e1e0-4a59-ab5d-0a95388a40b1</id>
+      <recordtableid>8b563c40-f41f-4c13-8a9d-bfa9017c9334</recordtableid>
     </None>
   </ItemGroup>
   <ItemGroup>
