QC-41 - Fixing PowerBI issues and DCT/RCC Version

--- a/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
+++ b/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
@@ -172,6 +172,18 @@
       <UserCode>true</UserCode>
       <id>7caebfa0-32a9-4ac5-bd30-aa64fcf27fe5</id>
     </Compile>
+    <Compile Include="Close_DCT.cs">
+      <BoundTo>c1a2ab54-3b47-4192-bc3c-198494ec122e</BoundTo>
+      <DependentUpon>Close_DCT.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>eace3789-e018-4353-a807-74fd58329fe6</id>
+    </Compile>
+    <Compile Include="Close_DCT.UserCode.cs">
+      <BoundTo>c1a2ab54-3b47-4192-bc3c-198494ec122e</BoundTo>
+      <DependentUpon>Close_DCT.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>9643b807-e82c-4fbf-9ca4-26f7047fbb9f</id>
+    </Compile>
     <Compile Include="eSourcePlatformRepository.cs">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <DependentUpon>eSourcePlatformRepository.rxrep</DependentUpon>
@@ -269,6 +281,11 @@
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <id>31438c5c-84cd-447e-a179-75203cd97943</id>
       <recordtableid>28e676c4-cee4-497e-8b62-291ea3c2618f</recordtableid>
+    </None>
+    <None Include="Close_DCT.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>c1a2ab54-3b47-4192-bc3c-198494ec122e</id>
+      <recordtableid>2569b4ed-6164-49fa-89df-a5b2c98e2608</recordtableid>
     </None>
     <None Include="eSourcePlatformRepository.rximg">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
